# dashboard

./: PROGRESS.md
.claude/rules/: execution-policy.md  workflow.md
.claude/rules/frameworks/fukict/: 01-setup.md  03-performance.md  04-lists.md  05-state.md  06-routing.md  07-build.md  08-flux.md  09-i18n.md  README.md
backend/service/: .rustfmt.toml  .watchexec.toml  Cargo.toml  DEVELOPMENT.md  Makefile.toml  README.md
backend/service/.cargo/: config.toml
backend/service/.confkit/spaces/demo/: demo.yml
backend/service/scripts/: kill-port.sh
backend/service/src/: main.rs
backend/service/src/handlers/: build.rs  mod.rs  workspaces.rs
backend/service/src/models/: workspace.rs
backend/service/src/services/: cli.rs  fs.rs
docs/: 01-架构概览.md  02-后端服务设计.md  03-前端架构设计.md  04-实现计划.md  README.md
frontend/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tsconfig.base.json
frontend/app/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/src/: App.tsx  main.tsx  routes.tsx
frontend/app/src/pages/: Dashboard.tsx  WorkspaceEditor.tsx
frontend/app/src/services/: api.ts
frontend/app/src/types/: workspace.ts
